[tool.poetry]
name = "llms-with-mlflow"
version = "0.1.0"
description = ""
authors = ["Cyril Kondratenko <ckondratenko@nebius.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = {version = "2.15.1", extras = ["genai"]}
datasets = "^3.0.0"
transformers = "^4.44.2"
sentencepiece = "^0.2.0"
setuptools = "^75.5.0"
peft = "^0.13.2"
accelerate = "^1.1.1"
bitsandbytes = "^0.44.1"
trl = "^0.12.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
pynvml = "^12.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
